# sniper_algorithm

./: .gitignore  Cargo.toml  README.md  output.txt
config/: config.toml
src/: config.rs  main.rs
src/algo_context/: algo_context.rs  algo_service.rs  mod.rs
src/algo_context/messages/: messages.rs
src/algorithams/: algorithm.rs  mod.rs  sniper_algo.rs
src/common_types/: algo_type.rs  mod.rs  order_types.rs  side.rs  time_in_force.rs  tracked_sender.rs
src/feed/: actor.rs  feed_actor.rs  feed_handle.rs  feed_service.rs  mod.rs
src/feed/messages/: l1_data.rs  l2_data.rs  level.rs  messages.rs  mod.rs  symbol_information.rs
src/logging/: algo_logger.rs  algo_report.rs  mod.rs
src/market/: market.rs  market_handle.rs  market_service.rs  mod.rs
src/market/messages/: execution_type.rs  market_messages.rs  market_responses.rs  mod.rs
