[package]
name = "sniper_algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
barter-data-sniper = "0.9.2"
barter-instrument-copy = "0.1.0"
binance = "0.21.0"
tokio = { version = "1", features = [
    "rt",
    "time",
    "sync",
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }
tokio-stream = "0.1.15"
barter-integration-copy = "0.7.5"
uuid = { version = "1.4", features = ["v4"] }
futures = "0.3"
rust_decimal = "1.28"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dotenv = "0.15"
log = "0.4"
flexi_logger = "0.22"
printpdf = "0.3"
chrono = "0.4"
time = "0.3"
rusttype = "0.9"
rayon = "1.10.0"
